package be.seriousbusiness.pattern.behavioral.observer.with_change_manager.observer;

import be.seriousbusiness.pattern.behavioral.observer.with_change_manager.subject.Subject;

public interface Observer {

    void update(Subject subject);

}
